--- a/zW.ini
+++ b/zW.ini
@@ -23,6 +23,7 @@ ruleset= Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/
 ruleset= Whatsapp,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Whatsapp/Whatsapp.list
 ruleset= Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Google/Google.list
 ruleset= Gemini,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Gemini/Gemini.list
+ruleset= Sora,https://raw.githubusercontent.com/5jwoj/openclash/refs/heads/main/sora.list
 ruleset= 国外,https://raw.githubusercontent.com/5jwoj/openclash/refs/heads/main/Proxy.list
 ruleset= 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
 ruleset= 国内,[]FINAL
